fix: animation mobile nav

--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,7 @@ font-size: 32px;
     padding: 0;
     cursor: pointer;
     background: none;
+    transition: transform 0.3s ease-in-out;
 }
 
 .nav-button:focus,
@@ -215,9 +216,7 @@ font-size: 32px;
     z-index: 8;
     top: 0;
     right: 0;
-
-    display: none;
-    /* display: flex; */
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
 
@@ -225,6 +224,14 @@ font-size: 32px;
     height: 100%;
     padding: 70px 70px 50px 30px;
     background-color: rgba(11, 29, 38, 0.8);
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+.mobile-nav.open {
+    display: flex;
+    transform: translateX(0);
+    opacity: 1;
 }
 
 .mobile-nav .nav,
